objects/fferpcore__SlackChannelSetting__mdt.object
<CustomObject>
    <description>Contains configuration details for the Slack Channel component.</description>
    <fields>
        <fullName>fferpcore__DestinationObjectType__c</fullName>
        <description>The API name of the object that provides user details for the related object&apos;s Slack channels.</description>
        <inlineHelpText>The API name of the object that provides user details for the related object&apos;s Slack channels.</inlineHelpText>
        <label>User Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__RecordNamePath__c</fullName>
        <description>The path or API name for the field containing the record identifier that you want to display in the Record Name column of the Slack Channel component.</description>
        <inlineHelpText>The path or API name for the field containing the record identifier that you want to display in the Record Name column of the Slack Channel component.</inlineHelpText>
        <label>Record Name Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__RelationshipPath__c</fullName>
        <description>The path or API name for the field connecting the object specified in the User Object field to the object specified in the Slack Channel Object field.</description>
        <inlineHelpText>The path or API name for the field connecting the object specified in the User Object field to the object specified in the Slack Channel Object field.</inlineHelpText>
        <label>Relationship Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__SourceObjectType__c</fullName>
        <description>The API name of the object on which to create Slack channels and manage channel members.</description>
        <inlineHelpText>The API name of the object on which to create Slack channels and manage channel members.</inlineHelpText>
        <label>Slack Channel Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__UserIdPath__c</fullName>
        <description>The path or API name for the field containing the Salesforce user ID.</description>
        <inlineHelpText>The path or API name for the field containing the Salesforce user ID.</inlineHelpText>
        <label>Salesforce User ID Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__UserNamePath__c</fullName>
        <description>The path or API name for the field containing the user identifier that you want to display in the User column of the Slack Channel component.</description>
        <inlineHelpText>The path or API name for the field containing the user identifier that you want to display in the User column of the Slack Channel component.</inlineHelpText>
        <label>User Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Slack Channel Configuration</label>
    <pluralLabel>Slack Channel Configurations</pluralLabel>
</CustomObject>